--- a/Bai_3.html
+++ b/Bai_3.html
@@ -9,6 +9,8 @@
                 document.write('số' + ' ' + so + ' ' + 'là số lớn hơn 0')
             } else if (so < 0) {
                 document.write('số' + ' ' + so + ' ' + 'là số nhỏ hơn 0')
+            }else {
+                document.write('Số nhập ko hợp lệ')
             }
         }
     </script>
